--- a/index.html
+++ b/index.html
@@ -16,74 +16,72 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top nav-top">
-        <div class="flex-div">
-            <div class="nav-left flex-div">
-                <a class="navbar-brand" href="#">Navbar</a>
-            </div>
-            <div class="nav-middle flex-div">
-                <div class="search-box flex-div">
-                    <input type="text" placeholder="Search">
-                    <button> <span class="material-icons">search </span></button>
-                </div>
-                <span class="material-icons">
-                    mic
-                </span>
-            </div>
-            <div class="nav-right flex-div">
-                <button>Login</button>
-                <button>Sign up</button>
-            </div>
 
+    <nav id="navTop" class="navbar navbar-dark navbar-expand-md bg-gradientg py-0 fixed-top ">
+        <div class="container-fluid">
+            <div class="nav-left">
+                <a class="navbar-brand" href="#"><img class="logo" src="img/Flickr_logo.png" alt=""></a>
+            </div>
+            <div class="nav-middle">
+                <i class="bi bi-search"></i>
+                <input class="form-control search-bar" type="search" placeholder="Photos, people, or groups"
+                    aria-label="Search">
+                <!-- </form> -->
+            </div>
+            <div class="nav-right">
+                <a class="btn btn-outline-primary btn-sm" href="#" role="button">Login</a>
+                <button class="btn btn-light btn-sm" type="submit">Sign up</button>
+            </div>
         </div>
     </nav>
-    <main class="container-fluid box">
-        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false"
-            data-bs-interval="false">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="img-fluid" src="img/house.jpg" class=" d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Find your inspiration.</h5>
-                        <p>Join the Flickr community, home to tens of billions of photos and 2 million groups.</p>
-                        <button>Start for free</button>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="img-fluid" src="img/house-decoration.jpg" class=" d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img class="img-fluid" src="img/big-city.jpg" class="d-block w-100" alt="...">
+
+
+    <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="img-fluid img-bg" src="img/sky.jpg" class=" d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1>Find your inspiration.</h1>
+                    <p>Join the Flickr community, home to tens of billions of photos and 2 million groups.</p>
+                    <button type="button" class="btn btn-light btn-lg">Start for free</button>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="carousel-item">
+                <img class="img-fluid img-bg" src="img/house-decoration.jpg" class=" d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img class="img-fluid img-bg" src="img/big-city.jpg" class="d-block w-100" alt="...">
+            </div>
         </div>
-        <footer class="row">
-            <nav class="nav nav-pills nav-justified  bg-black">
-                <a class="nav-link link-light" href="#">About</a>
-                <a class="nav-link link-light" href="#">Jobs</a>
-                <a class="nav-link link-light" href="#">Blog</a>
-                <a class="nav-link link-light" href="#">Developers</a>
-                <a class="nav-link link-light" href="#">Guidelines</a>
-                <a class="nav-link link-light" href="#">Help</a>
-                <a class="nav-link link-light" href="#">Help forum</a>
-                <a class="nav-link link-light" href="#">Privacy</a>
-                <a class="nav-link link-light" href="#">Terms</a>
-                <a class="nav-link link-light" href="#">Cookies</a>
-                <a class="nav-link link-light" href="#">English</a>
-                <a class="nav-link link-light" href="#">SmugMug+Flickr</a>
-            </nav>
-        </footer>
-    </main>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <footer class="row fixed-bottom">
+        <nav class="nav nav-pills nav-justified  bg-black">
+            <a class="nav-link link-light" href="#">About</a>
+            <a class="nav-link link-light" href="#">Jobs</a>
+            <a class="nav-link link-light" href="#">Blog</a>
+            <a class="nav-link link-light" href="#">Developers</a>
+            <a class="nav-link link-light" href="#">Guidelines</a>
+            <a class="nav-link link-light" href="#">Help</a>
+            <a class="nav-link link-light" href="#">Help forum</a>
+            <a class="nav-link link-light" href="#">Privacy</a>
+            <a class="nav-link link-light" href="#">Terms</a>
+            <a class="nav-link link-light" href="#">Cookies</a>
+            <a class="nav-link link-light" href="#">English</a>
+            <a class="nav-link link-light" href="#">SmugMug+Flickr</a>
+        </nav>
+    </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
