--- a/index.html
+++ b/index.html
@@ -12,60 +12,59 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-
     <nav id="navTop" class="navbar navbar-dark navbar-expand-md bg-gradientg py-0 fixed-top ">
         <div class="container-fluid">
             <div class="nav-left">
                 <a class="navbar-brand" href="#"><img class="logo" src="img/Flickr_logo.png" alt=""></a>
             </div>
             <div class="nav-middle">
-                <i class="bi bi-search"></i>
-                <input class="form-control search-bar" type="search" placeholder="Photos, people, or groups"
-                    aria-label="Search">
+                <div><i class="fa fa-search"></i></div>
+                <input class="form-control search-bar d-none d-lg-block" type="search"
+                    placeholder="Photos, people, or groups" aria-label="Search">
                 <!-- </form> -->
             </div>
             <div class="nav-right">
-                <a class="btn btn-outline-primary btn-sm" href="#" role="button">Login</a>
-                <button class="btn btn-light btn-sm" type="submit">Sign up</button>
+                <a class="btn btn-outline-primary" href="#" role="button">Login</a>
+                <button class="btn btn-light" type="submit">Sign up</button>
             </div>
         </div>
     </nav>
-
-
-    <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="img-fluid img-bg" src="img/sky.jpg" class=" d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1>Find your inspiration.</h1>
-                    <p>Join the Flickr community, home to tens of billions of photos and 2 million groups.</p>
-                    <button type="button" class="btn btn-light btn-lg">Start for free</button>
+    <section class="home">
+        <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" style="background-image:url('img/sky.jpg')">
+                    <div class="container">
+                        <h1 class="text-white">Find your inspiration.</h1>
+                        <p class="text-white">Join the Flickr community, home to tens of billions of photos and 2
+                            million groups.</p>
+                        <button type="button" class="btn btn-light btn-lg">Start for free</button>
+                    </div>
+                </div>
+                <div class="carousel-item" style="background-image:url('img/house-decoration.jpg')">
+                    <div class="container">
+                        <h1 class="text-white">Find your inspiration.</h1>
+                        <p class="text-white">Join the Flickr community, home to tens of billions of photos and 2
+                            million groups.</p>
+                        <button type="button" class="btn btn-light btn-lg">Start for free</button>
+                    </div>
+                </div>
+                <div class="carousel-item" style="background-image:url('img/house.jpg')">
+                    <div class="container">
+                        <h1 class="text-white">Find your inspiration.</h1>
+                        <p class="text-white">Join the Flickr community, home to tens of billions of photos and 2
+                            million groups.</p>
+                        <button type="button" class="btn btn-light btn-lg">Start for free</button>
+                    </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img class="img-fluid img-bg" src="img/house-decoration.jpg" class=" d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img class="img-fluid img-bg" src="img/big-city.jpg" class="d-block w-100" alt="...">
-            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <footer class="row fixed-bottom">
-        <nav class="nav nav-pills nav-justified  bg-black">
+    </section>
+    <footer id="navBottom" class="fixed-bottom">
+        <nav id="navBottom" class="nav nav-pills nav-justified bg-black">
             <a class="nav-link link-light" href="#">About</a>
             <a class="nav-link link-light" href="#">Jobs</a>
             <a class="nav-link link-light" href="#">Blog</a>
@@ -78,9 +77,11 @@
             <a class="nav-link link-light" href="#">Cookies</a>
             <a class="nav-link link-light" href="#">English</a>
             <a class="nav-link link-light" href="#">SmugMug+Flickr</a>
+            <a class="nav-link link-light" href="#"><i class="fab fa-facebook"></i></a>
+            <a class="nav-link link-light" href="#"><i class="fab fa-twitter"></i></a>
+            <a class="nav-link link-light" href="#"><i class="fab fa-instagram"></i></a>
         </nav>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
